Fri Sep 14 09:34:47 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/RawStorage.java: Fix OEMM.Node.minIndex and
	OEMM.Node.maxIndex, previous values were bogus.
	They are now non-negative and OEMM.Node.maxIndex > OEMM.Node.minIndex.
	* src/org/jcae/mesh/oemm/OEMM.java: Modify OEMM.Node.serialVersionUID
	to forbid use of wrongly computed minIndex and maxIndex values.
	* src/org/jcae/mesh/oemm/Storage.java: Use buffered streams to speed
	up OEMM writing.
	* src/org/jcae/mesh/amibe/metrics/Quadric3DError.java: Let A member
	be a double[] array instead of Metric3D to improve performance.

Thu Sep 13 18:21:50 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/OEMM.java (search): Throw
	IllegalArgumentException instead of RuntimeException when vertex does
	not belong to any octree leaf.

Wed Sep 12 00:08:54 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/MeshOEMMDecimate.java
	  src/org/jcae/mesh/MeshOEMMDecimateMoreLeaves.java: Merge
	MeshOEMMDecimate and MeshOEMMDecimateMoreLeaves, and remove the latter.

Thu Sep  6 11:20:33 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AbstractTriangle.java (copy): Also copy
	readable/writable members.
	* src/org/jcae/mesh/MeshOEMMCountElements.java: Class removed, this
	feature has been included into OEMM viewers.

Wed Sep  5 15:23:36 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Triangle.java
	  src/org/jcae/mesh/amibe/ds/AbstractTriangle.java: Move
	readable/writable members from Triangle to AbstractTriangle.
	* src/org/jcae/mesh/oemm/MeshReader.java: New class to improve
	user control on reading OEMM nodes.
	* src/org/jcae/mesh/oemm/RawStorage.java (IndexExternalVerticesProcedure):
	More aggressive memory management by catching OutOfMemoryError
	exception.

Tue Sep  4 09:34:15 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
